--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,12 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.11",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsdom": "^27.3.0",
+    "xacro-parser": "^0.3.11",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
